{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 63,
  "lineage": "78790f8b-dd3a-3fc6-9339-e8bb1619e8ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:258020787298:instance/i-05ccbb786968cc708",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ccbb786968cc708",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05800f7a0f3df3d1c",
            "private_dns": "ip-172-31-22-94.ec2.internal",
            "private_ip": "172.31.22.94",
            "public_dns": "ec2-54-167-63-157.compute-1.amazonaws.com",
            "public_ip": "54.167.63.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0449c95a6f540323b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075cc6f5753ed843e",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a17467e769c73aba"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:258020787298:instance/i-08265b0988d7aa12e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08265b0988d7aa12e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f1db9fd63c651402",
            "private_dns": "ip-172-31-22-4.ec2.internal",
            "private_ip": "172.31.22.4",
            "public_dns": "ec2-54-160-230-58.compute-1.amazonaws.com",
            "public_ip": "54.160.230.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00f77da2ad774dcfe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075cc6f5753ed843e",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a17467e769c73aba"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:258020787298:instance/i-0b5befced61bd9649",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5befced61bd9649",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ccacad1e34e0fd9c",
            "private_dns": "ip-172-31-17-98.ec2.internal",
            "private_ip": "172.31.17.98",
            "public_dns": "ec2-54-173-37-62.compute-1.amazonaws.com",
            "public_ip": "54.173.37.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084a2e9e33b39f2dc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075cc6f5753ed843e",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a17467e769c73aba"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-secound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secound",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-2:258020787298:instance/i-09e4fdbf850026b4e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e4fdbf850026b4e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f17fc2122e538578",
            "private_dns": "ip-172-31-17-13.us-east-2.compute.internal",
            "private_ip": "172.31.17.13",
            "public_dns": "ec2-18-224-22-4.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.22.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e07c879ddd6a82c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess-secound"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002bb264e6f0f133f",
            "tags": {
              "Name": "dev-secound0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08641a4c0569b3a52"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess-secound"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-2:258020787298:instance/i-005a24be8ce5753bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005a24be8ce5753bf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ebc0afa805ab6a9",
            "private_dns": "ip-172-31-18-247.us-east-2.compute.internal",
            "private_ip": "172.31.18.247",
            "public_dns": "ec2-18-222-134-243.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.134.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c9c251faf935da00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess-secound"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002bb264e6f0f133f",
            "tags": {
              "Name": "dev-secound1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08641a4c0569b3a52"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess-secound"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-2:258020787298:instance/i-0d3270277410cbd38",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3270277410cbd38",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1de98cb1024ed66",
            "private_dns": "ip-172-31-20-74.us-east-2.compute.internal",
            "private_ip": "172.31.20.74",
            "public_dns": "ec2-52-15-46-248.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.46.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0260dd6fbd00a77fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess-secound"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002bb264e6f0f133f",
            "tags": {
              "Name": "dev-secound2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08641a4c0569b3a52"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-acess-secound"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:258020787298:instance/i-0fa81c414387eb819",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa81c414387eb819",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8a087da29f2098f",
            "private_dns": "ip-172-31-29-217.ec2.internal",
            "private_ip": "172.31.29.217",
            "public_dns": "ec2-54-234-233-252.compute-1.amazonaws.com",
            "public_ip": "54.234.233.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03fb42128b2399ef0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-acess"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075cc6f5753ed843e",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a17467e769c73aba"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.ssh-acess"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-acess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258020787298:security-group/sg-0a17467e769c73aba",
            "description": "ssh-acess",
            "egress": [],
            "id": "sg-0a17467e769c73aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.37.174.144/32",
                  "177.37.174.144/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-acess",
            "name_prefix": null,
            "owner_id": "258020787298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shh"
            },
            "timeouts": null,
            "vpc_id": "vpc-098226a17b9e4332c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-acess-secound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secound",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:258020787298:security-group/sg-08641a4c0569b3a52",
            "description": "ssh-acess-secound",
            "egress": [],
            "id": "sg-08641a4c0569b3a52",
            "ingress": [
              {
                "cidr_blocks": [
                  "177.37.174.144/32",
                  "177.37.174.144/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-acess-secound",
            "name_prefix": null,
            "owner_id": "258020787298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c6d118e15595295"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}